# cococo

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: hill_climbing_data_q24_numcnots16_metriccrossing_parallelTruetest_hc  hill_climbing_examples.ipynb  layouts_general.ipynb  movable_qubit_router_examples.ipynb  plotting.py  snake_examples.ipynb
scripts/evaluations_beyond_the_surface_code/: circuit_types.py  evaluation.py  f_vs_t_q24_row_small.py  numerics_summarized.ipynb  test_evaluation.py
scripts/evaluations_movable_logical_qubits/fix_q_vary_depth/: generate_circuits_true_seq.py  redo_plots_table_output.py  true_seq_circs_j8_q120_numgates2560d320_x20.json  vary_depths_hex_251103.py
scripts/evaluations_movable_logical_qubits/vary_j/: vary_j_q60_numgates500_triple.py  varyj_layouttypetriple_q60_m2_n5_j2_3_4_5_10_15_20_25_30_numgates500_dvaries_ncirc10_2025-11-18_usedagTrue.pkl
src/cococo/: __init__,py  circuit_construction.py  dag_helper.py  hill_climber.py  internal_testing.py  layouts.py  snake_builder.py  types.py  utils_routing.py
src/cococo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/python/: test_circuit_construction.py  test_hill_climber.py  test_lattice_router.py  test_layouts.py  test_snake_builder.py
